--- a/src/assets/scss/layout/_details.scss
+++ b/src/assets/scss/layout/_details.scss
@@ -51,7 +51,7 @@
             to right bottom,
             rgba($color-grey-dark-4, 0.8),
             rgba($color-grey-dark-5, 0.8)),
-        url(src/img/technology.jpg);
+        url('src/assets/img/technology.jpg');
         background-size: cover;
         background-position: top;
         min-height: 52rem;
