--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -20,7 +20,8 @@
         }
         
         @include respond(phone){
-            margin-left:1rem;
+            //margin-left:1rem;
+            margin-left: -4rem;
         }
     }
     
