--- a/src/assets/scss/components/_search.scss
+++ b/src/assets/scss/components/_search.scss
@@ -12,6 +12,7 @@
         margin-left: 10rem !important;
         margin-top: -11rem;
         background-color: $color-grey-light-2;
+        border-radius: 2rem;
     }
 
     &__input {
