--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
                         <img class="card-img-top mr-3" src="{{individual?.img}}" alt="Card image cap">
                     </div>
                     <div class="card-btn">
-                        <button type="button" class="btn btn-primary mr-2">Send Message</button>
+                        <button type="button" class="btn mr-2">Send Message</button>
                         <br>
                         <section id="like" class="rating">
                             <input type="radio" [checked]="rating===5" id="heart_5" value="5" />
